--- a/index.html
+++ b/index.html
@@ -5,10 +5,6 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Студія</title>
-    <link
-      href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
-      rel="stylesheet"
-    />
     <!-- normalize -->
     <link
       rel="stylesheet"
@@ -26,24 +22,26 @@
     <meta name="msapplication-TileColor" content="#da532c" />
     <meta name="theme-color" content="#ffffff" />
     <!-- base styles -->
-    <link rel="stylesheet" href="./css/styles.css" />
+    <link rel="stylesheet" href="./css/main.min.css" />
   </head>
   <body>
     <!--Верхня лінія-->
     <header class="header">
       <div class="header-container container">
-        <nav class="header-nav">
-          <a href="./index.html" class="logo link"><span class="logo--accent">Web</span>Studio</a>
-          <ul class="header-nav__list list">
-            <li class="header-nav__item">
-              <a href="./index.html" class="header-nav__link header-nav__link--current link"
+        <nav class="navigation">
+          <a href="./index.html" class="logo-header logo link"
+            ><span class="logo--accent">Web</span>Studio</a
+          >
+          <ul class="navigation__list list">
+            <li class="navigation__item">
+              <a href="./index.html" class="navigation__link navigation__link--current link"
                 >Студія</a
               >
             </li>
-            <li class="header-nav__item">
-              <a href="./portfolio.html" class="header-nav__link link">Портфоліо</a>
+            <li class="navigation__item">
+              <a href="./portfolio.html" class="navigation__link link">Портфоліо</a>
             </li>
-            <li class="header-nav__item"><a href="" class="header-nav__link link">Контакти</a></li>
+            <li class="navigation__item"><a href="" class="navigation__link link">Контакти</a></li>
           </ul>
         </nav>
         <ul class="header-contacts list">
@@ -197,21 +195,27 @@
       </section>
 
       <!--Чим ми займаємося-->
-      <section class="engage section">
+      <section class="activities section">
         <div class="container">
-          <h2 class="section__title">Чим ми займаємося</h2>
-          <ul class="engage__list list">
-            <li class="engage__item">
+          <h2 class="activities__title">Чим ми займаємося</h2>
+          <ul class="activities__list list">
+            <li class="activities__item">
               <img src="./images/img1.jpg" alt="Десктопні додатки" width="370" />
-              <div class="engage__bg"><h3 class="engage__title">Десктопні додатки</h3></div>
+              <div class="activities__bg">
+                <h3 class="activities__card-title">Десктопні додатки</h3>
+              </div>
             </li>
-            <li class="engage__item">
+            <li class="activities__item">
               <img src="./images/img2.jpg" alt="Мобільні додатки" width="370" />
-              <div class="engage__bg"><h3 class="engage__title">Мобільні додатки</h3></div>
+              <div class="activities__bg">
+                <h3 class="activities__card-title">Мобільні додатки</h3>
+              </div>
             </li>
-            <li class="engage__item">
+            <li class="activities__item">
               <img src="./images/img3.jpg" alt="Дизайнерські рішення" width="370" />
-              <div class="engage__bg"><h3 class="engage__title">Дизайнерські рішення</h3></div>
+              <div class="activities__bg">
+                <h3 class="activities__card-title">Дизайнерські рішення</h3>
+              </div>
             </li>
           </ul>
         </div>
@@ -220,7 +224,7 @@
       <!--Наша команда-->
       <section class="team section">
         <div class="container">
-          <h2 class="section__title">Наша команда</h2>
+          <h2 class="team__title">Наша команда</h2>
           <ul class="team__list list">
             <li class="team__item">
               <img src="./images/team1.jpg" alt="Ігор Дем'яненко" width="270" />
@@ -361,7 +365,7 @@
       <!-- Постійні клієнти -->
       <section class="clients section">
         <div class="container">
-          <h2 class="section__title">Постійні клієнти</h2>
+          <h2 class="clients__title title">Постійні клієнти</h2>
           <ul class="clients__list list">
             <li class="clients__item">
               <a href="" class="clients__link link">
@@ -411,7 +415,7 @@
     <footer class="footer">
       <div class="container footer__container">
         <div class="footer__contacts">
-          <a href="./index.html" class="footer-logo link"
+          <a href="./index.html" class="logo-footer logo--white logo link"
             ><span class="logo--accent">Web</span>Studio</a
           >
           <address class="footer-address">
@@ -438,7 +442,7 @@
           </address>
         </div>
         <div class="footer-icon">
-          <h3 class="title">приєднуйтесь</h3>
+          <h3 class="footer-icon__title">приєднуйтесь</h3>
           <ul class="social-media social-media--dark list">
             <li class="social-media__item social-media__item--dark">
               <a href="" class="social-media__link social-media__link--dark link"
