--- a/portfolio.html
+++ b/portfolio.html
@@ -5,10 +5,6 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Портфоліо</title>
-    <link
-      href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
-      rel="stylesheet"
-    />
     <!-- normalize -->
     <link
       rel="stylesheet"
@@ -26,25 +22,27 @@
     <meta name="msapplication-TileColor" content="#da532c" />
     <meta name="theme-color" content="#ffffff" />
     <!-- base styles -->
-    <link rel="stylesheet" href="./css/styles.css" />
+    <link rel="stylesheet" href="./css/main.min.css" />
   </head>
 
   <body>
     <!--Верхня лінія-->
     <header class="header--border">
       <div class="header-container container">
-        <nav class="header-nav">
-          <a href="./index.html" class="logo link"><span class="logo--accent">Web</span>Studio</a>
-          <ul class="header-nav__list list">
-            <li class="header-nav__item">
-              <a href="./index.html" class="header-nav__link link">Студія</a>
+        <nav class="navigation">
+          <a href="./index.html" class="logo-header logo link"
+            ><span class="logo--accent">Web</span>Studio</a
+          >
+          <ul class="navigation__list list">
+            <li class="navigation__item">
+              <a href="./index.html" class="navigation__link link">Студія</a>
             </li>
-            <li class="header-nav__item">
-              <a href="./portfolio.html" class="header-nav__link header-nav__link--current link"
+            <li class="navigation__item">
+              <a href="./portfolio.html" class="navigation__link navigation__link--current link"
                 >Портфоліо</a
               >
             </li>
-            <li class="header-nav__item"><a href="" class="header-nav__link link">Контакти</a></li>
+            <li class="navigation__item"><a href="" class="navigation__link link">Контакти</a></li>
           </ul>
         </nav>
         <ul class="header-contacts list">
@@ -264,7 +262,7 @@
     <footer class="footer">
       <div class="container footer__container">
         <div class="footer__contacts">
-          <a href="./index.html" class="footer-logo link"
+          <a href="./index.html" class="logo-footer logo--white logo link"
             ><span class="logo--accent">Web</span>Studio</a
           >
           <address class="footer-address">
@@ -291,7 +289,7 @@
           </address>
         </div>
         <div class="footer-icon">
-          <h3 class="title">приєднуйтесь</h3>
+          <h3 class="footer-icon__title">приєднуйтесь</h3>
           <ul class="social-media social-media--dark list">
             <li class="social-media__item social-media__item--dark">
               <a href="" class="social-media__link social-media__link--dark link"
